fixed overlap issues and added parallax scrolling animation

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -13,6 +13,7 @@
     bottom: 0;
     width: 400px;
     background: white;
+    z-index: 9999;
 
     .links {
       position: absolute;
@@ -31,6 +32,7 @@
   }
 
   button {
+    z-index: 9999;
     width: 50px;
     height: 50px;
     border-radius: 50%;
